# friendtube

client/product/: README.md  package-lock.json  package.json  vite.config.ts
client/product/src/: App.css  App.tsx  Interfaces.tsx
client/product/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/product/src-tauri/src/: buffer_manager.rs  leech_manager.rs  main.rs  node_protocol.txt  seed_manager.rs  server_connection_manager.rs  unittest.rs  video_server.rs
client/product/src-tauri/src/shared/: http_client.rs  http_codec.rs  http_server.rs  metadata.rs  mod.rs  tokenizer.rs
client/product/src/components/: Navbar.tsx  StatCard.tsx  VideoCard.tsx  VideoPlayer.tsx
client/product/src/pages/: LoginPage.tsx  VideoGridPage.tsx  VideoPlayPage.tsx
server/product2/: cluster.py  endpoints.py  endpointsDescriptions.txt  http.py  metadataHandler.py  readersWritersLock.py  server.py  userHandler.py  users.db
server/product2/videos/: metadata.json
server/product2/videos/video1/: playlist.m3u8  playlist10.ts  playlist101.ts  playlist11.ts  playlist12.ts  playlist14.ts  playlist16.ts  playlist17.ts  playlist18.ts  playlist19.ts  playlist2.ts  playlist20.ts  playlist21.ts  playlist22.ts  playlist23.ts  playlist25.ts  playlist26.ts  playlist27.ts  playlist31.ts  playlist32.ts  playlist36.ts  playlist37.ts  playlist38.ts  playlist4.ts  playlist40.ts  playlist41.ts  playlist42.ts  playlist44.ts  playlist46.ts  playlist47.ts  playlist48.ts  playlist52.ts  playlist55.ts  playlist57.ts  playlist59.ts  playlist6.ts  playlist60.ts  playlist62.ts  playlist65.ts  (+21 more)
(+619 files in other folders)
