[package]
name = "friendtube"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "http-all", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", default-features = false }
local-ip-address = "0.5.3"
url = "2.4.0"
http = "1.0.0"
bytecodec = "0.4.15"
httpcodec = "0.2.3"
mio = "0.8.10"
httparse = "1.8.0"
dashmap = "5.5.3"
rand = "0.8.5"
sha2 = "0.10.8"
hex-literal = "0.4.1"
hex = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
